--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "clsx": "^1.1.1",
     "docusaurus-lunr-search": "^2.1.14",
     "file-loader": "^6.2.0",
+    "hast-util-is-element": "^1.1.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "rehype-katex": "^5.0.0",
+    "remark-math": "^3.0.1",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
